# holz_logistik_server

./: .gitignore  Cargo.toml  README.md  db_setup.sh  package-lock.json  package.json  route.rest  server.js  server_working.rs
db_test/: Cargo.toml  holz_logistik.db  people.json
db_test/src/: lib.rs  main.rs  test.rs
db_test/src/db/: mod.rs
db_test/src/db/tables/: contract_tables.rs  location_tables.rs  mod.rs  photo_tables.rs  shipment_tables.rs  user_tables.rs
db_test/src/local_storage/: core_local_storage.rs  mod.rs
db_test/src/local_storage/contract/: contract_local_storage.rs  contract_tables.rs  mod.rs
db_test/src/local_storage/location/: location_local_storage.rs  mod.rs
db_test/src/local_storage/note/: mod.rs  note_local_storage.rs  note_tables.rs
db_test/src/local_storage/photo/: photo_local_storage.rs  photo_tables.rs
db_test/src/local_storage/sawmill/: mod.rs  sawmill_local_storage.rs  sawmill_tables.rs
db_test/src/local_storage/shipment/: shipment_local_storage.rs  shipment_tables.rs
db_test/src/local_storage/user/: mod.rs  user_local_storage.rs
holz_logistik_web/: package-lock.json  package.json
holz_logistik_web/src/: App.css  App.js
holz_logistik_web/src/components/: LocationForm.js  LocationMap.js  Modal.js  ShipmentForm.js  UserForm.js
holz_logistik_web/src/pages/: LocationsPage.js  (+2 more)
models/: location.js  shipment.js  user.js
routes/: locations.js  route.rest  shipments.js  users.js
sample_data/: locations.json  shipments.json  users.json
src/: config.rs  error.rs  main.rs  old_main.rs  test.rs
src/config/: mod.rs
src/controller/: mod.rs
src/db/: mod.rs  user_store.rs
src/handlers/: auth.rs  client_handler.rs  connection_handler.rs  database_handler.rs  mod.rs  user.rs  ws.rs
src/local_storage/: core_local_storage.rs  mod.rs
src/models/: client.rs  message.rs  user.rs
src/services/: auth_service.rs  message_service.rs  mod.rs  sync_service.rs
src/ws/: connection.rs  message_router.rs  mod.rs
(+22 files in other folders)
