[package]
name = "holz_logistik_server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"
uuid = { version = "1.16.0", features = ["v4"] }
dotenv ={ version = "0.15.0"}
chrono ={ version = "*"}