[package]
name = "holz_logistik_server_test"
version = "0.1.0"
edition = "2024"

[dependencies]
libsqlite3-sys = "0.32.0"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
base64 = "0.22.1"
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"
dotenv ={ version = "0.15"}
r2d2 = { version = "0.8.10"}
r2d2_sqlite ={ version = "0.27.0"}
