[package]
name = "db_test"
version = "0.1.0"
edition = "2024"

[lib]
name = "db_test"
path = "src/lib.rs"

[[bin]]
name = "db_test"
path = "src/main.rs"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[dependencies]
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
base64 = "0.22.1"
